[metadata]
name = tkinter
url = https://github.com/panda3d/tkinter
description = Python interface to Tcl/Tk
long_description = file: README.md
long_description_content_type = text/markdown
license = Python Software Foundation License
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: Python Software Foundation License
	Operating System :: OS Independent
	Programming Language :: C
	Programming Language :: Tcl
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: Implementation :: CPython
	Topic :: Software Development :: Libraries
	Topic :: Software Development :: Libraries :: Application Frameworks
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Software Development :: User Interfaces
project_urls =
	Source=https://github.com/python/cpython
	Tracker=https://github.com/panda3d/tkinter/issues
	Documentation=https://docs.python.org/3/library/tkinter.html
